--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7786,7 +7786,7 @@ table p {
 -----------------------------------------------------------------------
 */
 .footer-area {
-  background-color: #f8f8f8;
+  background-color: #ddf5f7;
   padding: 0;
   position: relative;
 }
